fixed label spacing in docs

--- a/src/sass/pages/_docs.sass
+++ b/src/sass/pages/_docs.sass
@@ -6,8 +6,6 @@
       justify-content: initial
   .hr-light
     margin: 14px 0 75px
-  .label
-    margin-right: 3px
   .side-menu
     width: 255px
     margin-top: 8px
